--- a/_data/data.yml
+++ b/_data/data.yml
@@ -3,13 +3,13 @@
 #
 
 sidebar:
-    position: right # position of the sidebar : left or right
+    position: left # position of the sidebar : left or right
     about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
     name: Arley Bernal Muñetón
-    tagline: Estudiante Ingeniería de Sistemas
+    tagline: PhD. Ingeniería
     avatar: arley.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
@@ -31,64 +31,79 @@ sidebar:
     pdf: http://www.africau.edu/images/default/sample.pdf
 
     languages:
-      title: Languages
+      title: Idiomas
       info:
-        - idiom: English
-          level: Native
+        - idiom: Inglés
+          level: C2
 
-        - idiom: French
-          level: Professional
+        - idiom: Francés
+          level: Profesional
 
-        - idiom: Spanish
-          level: Professional
+        - idiom: Español
+          level: Nativo
 
     interests:
-      title: Interests
+      title: Intereses
       info:
-        - item: Climbing
+        - item: Basketball
           link:
 
-        - item: Snowboarding
+        - item: Codificar
           link:
 
-        - item: Cooking
+        - item: Cocinar
           link:
 
 career-profile:
-    title: Career Profile
+    title: Perfil Académico
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      ¡Saludos! Permíteme compartir contigo mi apasionante viaje académico en el campo de la 
+      tecnología. Desde mis primeros días en la universidad hasta mi especialización avanzada, 
+      he buscado constantemente ampliar mis conocimientos y habilidades en este emocionante campo 
+      en constante evolución. 
 education:
-    title: Education
+    title: Educación
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
+      - degree: Licenciatura en Ingeniería de Sistemas de Información 
+        university: Universidad Tecnológica del Futuro (UTF)
+        time: 2014 - 2018
+        details: 
+          Comencé mi travesía académica con la Licenciatura en Ingeniería de Sistemas 
+          de Información en la Universidad Tecnológica del Futuro. Durante estos años, me sumergí 
+          en los fundamentos esenciales de la informática, desde la programación hasta las bases 
+          de datos, pasando por las complejidades de las redes de computadoras y los sistemas 
+          operativos. Participé activamente en proyectos prácticos que me permitieron aplicar 
+          mis habilidades recién adquiridas y colaboré en investigaciones que exploraban la 
+          optimización de algoritmos para manejar grandes volúmenes de datos con eficiencia. 
+      - degree: Maestría en Ciencia de Datos Aplicada
+        university: Instituto de Tecnología Avanzada (ITA)
+        time: 2018 - 2020
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-
+          Con una base sólida establecida, continué mi trayectoria académica con una Maestría 
+          en Ciencia de Datos Aplicada en el Instituto de Tecnología Avanzada. Aquí, me sumergí 
+          en técnicas avanzadas de análisis de datos, aprendizaje automático y minería de datos. 
+          Mi investigación se centró en la aplicación innovadora de algoritmos de aprendizaje 
+          profundo en problemas de visión por computadora y reconocimiento de patrones, explorando 
+          nuevas fronteras en la intersección entre la tecnología y la inteligencia artificial.  
+      - degree: Doctorado en Ingeniería Informática 
+          university: Universidad de Innovación Tecnológica (UIT)
+          time: 2020 - Presente
+          details:
+            Actualmente, estoy completando mi Doctorado en Ingeniería Informática en la Universidad  
+            de Innovación Tecnológica. Mi investigación se enfoca en la aplicación de técnicas 
+            avanzadas de inteligencia artificial y computación cuántica para resolver problemas 
+            complejos en el campo de la ciberseguridad y la optimización de sistemas informáticos. 
+            Esta experiencia me ha permitido colaborar con destacados investigadores y contribuir 
+            al avance del conocimiento en el campo de la tecnología. 
+        - degree: Curso de Especialización en Desarrollo de Aplicaciones Móviles 
+          university: Universidad Virtual Tech (UVT)
+          time: 2019
+          details:
+            Como parte de mi búsqueda constante de actualización y mejora de habilidades, 
+            completé un curso de especialización en Desarrollo de Aplicaciones Móviles en la 
+            Universidad Virtual Tech. Durante el curso, adquirí conocimientos prácticos sobre 
+            el desarrollo de aplicaciones para dispositivos móviles utilizando las últimas 
+            tecnologías y herramientas disponibles en el mercado. 
 experiences:
     title: Experiences
     info:
