--- a/_data/data.yml
+++ b/_data/data.yml
@@ -133,10 +133,10 @@ experiences:
           pellentesque eu, pretium quis, sem.
             - Bullet point
             - Bullet point
-      - rol: Desarrollador de UI
-        tiempo: 2012 - 2014
-        empresa: Amazon, Londres
-        detalles: |
+      - role: Desarrollador de UI
+        time: 2012 - 2014
+        company: Amazon, Londres
+        details: |
           Como Desarrollador de UI en Amazon, Londres, mi función principal fue diseñar y 
           desarrollar interfaces de usuario eficientes y atractivas para aplicaciones web y móviles. 
           Trabajé en colaboración con equipos de diseño y desarrollo para traducir los requisitos de 
